# store_check_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/store_check_bot/: __init__.py  config.py  main.py  states.py
src/store_check_bot/db/: __init__.py  database.py  migrate.py  models.py
src/store_check_bot/filters/: __init__.py  admin.py
src/store_check_bot/handlers/: __init__.py  admin.py  check.py  department.py  settings.py  start.py
src/store_check_bot/keyboards/: __init__.py  main_menu.py  product_inline.py  settings_inline.py
src/store_check_bot/repositories/: __init__.py  bot_users.py  products.py  settings_repo.py
src/store_check_bot/services/: __init__.py  daily_assignment.py  excel_export.py  excel_import.py  runtime_settings.py  scheduler.py
src/store_check_bot/utils/: __init__.py  formatting.py  messages.py
tests/: conftest.py  test_config.py  test_daily_assignment.py  test_excel_import.py  test_runtime_settings.py  test_scheduler.py  test_upload_db.py
